# xInsp-plugin-hikrobot-camera

./: .gitignore  CMakeLists.txt  README.md  hikrobot_camera.cpp  plugin.json
tests/: test_all_cam_freerun.cpp  test_any_cam.cpp  test_any_cam_noroi.cpp  test_ca050_alone.cpp  test_ce200_alone.cpp  test_counter_probe.cpp  test_event_probe.cpp  test_event_probe_all.cpp  test_four_cam_freerun.cpp  test_io_line1.cpp  test_io_probe.cpp  test_live.cpp  test_native.cpp  test_overrun.cpp  test_readback.cpp  test_schema.cpp  test_stress.cpp  test_strict.cpp  test_surge.cpp  test_tail_drop.cpp  test_three_cam_freerun.cpp  test_timestamps.cpp  test_trig_probe.cpp  test_trigger_sweep.cpp  test_ts_dump.cpp  test_two_cam.cpp  test_two_cam_align.cpp  test_two_cam_freerun.cpp  test_two_cam_sw.cpp  test_ui.cjs  test_underrun.cpp
tools/: reset_cameras.ps1
ui/: index.html
